@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.program.advanced.launcher" name="Advanced Launcher" version="2.2.4" provider-name="Angelscry">
+<addon id="plugin.program.advanced.launcher" name="Advanced Launcher" version="2.2.5" provider-name="Angelscry">
     <requires>
         <import addon="xbmc.python" version="2.1"/>
         <import addon="script.module.simplejson" version="2.0.9"/>
